--- a/www/prep11.html
+++ b/www/prep11.html
@@ -49,7 +49,7 @@
         </nav>
         <div class="meat"> 
             <h3> PREP:Step 11 Survery time #2</h3>
-            <p> Now please examine your child's stool. How would you describe it? </p>
+            <p> Now please examine your child's stool for a second time. How would you describe it? </p>
             <img src="img/stool-chart.png" class="img-responsive" alt="Responsive image" />
             <a role="button" id="type1" class="btn btn-primary btn-lg btn-block">
                 Seperate hard lumps, kind of like nuts.(hard to pass)
