--- a/www/prep.html
+++ b/www/prep.html
@@ -47,7 +47,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Stony Brook Children's Hospital</a>
+      <a class="navbar-brand" href="#">Colonoscopy Prep App</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -63,9 +63,11 @@
 </nav>
     <h3> PREP</h3>
     <p> Please press NEXT to BEGIN the interactive colonoscopy prep.</p>
+    <a role="button" class="btn btn-success btn-lg btn-block" href="prep01.html">NEXT</a>
         <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
           <div class="container">
-            <a role="button" class="btn btn-success btn-lg btn-block" href="prep01.html">NEXT</a>
+            
+            <a role="button" class="btn btn-primary btn-lg btn-block" href="index.html">HOME</a>
           </div>
         </nav>
     </body> 
