--- a/www/prep08.html
+++ b/www/prep08.html
@@ -53,7 +53,7 @@
             <img src="img/stool-color.png" class="img-responsive" alt="Responsive image" />
             <p> <strong> SELECT 0 if your child produced zero stool </strong></p>
             <br>
-            <select id="stool_color">
+            <select name="stool_color">
               <option value="0">0</option>
               <option value="1">1</option>
               <option value="2">2</option>
@@ -83,7 +83,7 @@
         <script type="text/javascript">
         $(function(){
             $("#submit").click(function(){
-                window.localStorage.setItem("stoolColor",$( "#myselect option:selected" ).text());
+                window.localStorage.setItem("stoolColor",$('select[name=stool_color]').val());
                 window.location.href = "prep09.html";
             });
         });
