--- a/www/prep10.html
+++ b/www/prep10.html
@@ -53,7 +53,135 @@
               <p> It is now time to have your child take the second half (9oz) of Miralax prep. You have <strong> 4 hours </strong> to consume it.</p>
               <p><strong> NOTE: For the demo it will only run for 5 seconds </strong></p>
               <p id="time_left_line"> You have <span id="countDown">X</span> time left</p>
+              <p> Now remember to observe the shape and color of your child's stool. There will be a survey after these 4 hours </p>
               <a role="button" id="nextBtn" class="btn btn-success btn-lg btn-block" href="prep11.html">FINISHED PREP</a>
+            
+              <h1>FAQ</h1>
+
+            <!-- CONTENT-->
+            <div class="panel-group" id="accordion">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                                1. How long after starting the Prep should my child start to go to the bathroom?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseOne" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            Each child is different, but most children should have to move their
+                            bowels by the time they finish both halves of the Miralax preparation.
+                            If your child has finished the entire bowel prep and still has not had
+                            a bowel movement, please wait another 2 hours. If he or she still has not gone to the
+                            bathroom, please
+                            call (631) 444-6000 and ask to speak to the pediatric gastroenterologist fellow on call.
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+                                2. My child drank the prep and is going to the bathroom, but it is solid or soft and not
+                                “apple juice”-colored. What should I do?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseTwo" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            As long as your child continues to have bowel movements there is no need
+                            for concern.
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+                                3. My child drank the prep and has still not gone to the bathroom. What should I do?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseThree" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            If your child has finished the entire bowel prep and still has not had
+                            a bowel movement, please wait another 2 hours. If he or she still has not gone to the
+                            bathroom after
+                            waiting, please call (631) 444-6000 and ask to speak to the pediatric gastroenterologist
+                            fellow on call.
+
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
+                                4. How long must my child refrain from eating before the colonoscopy?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseFour" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            Your child must not have anything to eat for 8 hours prior to arrival at
+                            the endoscopy suite.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+                                5. When will I be able to get results from my child’s colonoscopy?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseFive" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            Biopsy results are usually available two weeks after your child’s procedure.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
+                                6. My child will be in school the day before the colonoscopy. At what time should he/she
+                                begin the prep?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseSix" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            If your child is going to school on the day before the colonoscopy, we
+                            recommend starting the prep when they return home from school.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">
+                                7. The instructions say to eat nothing on the morning of the colonoscopy, but my child
+                                takes
+                                daily medications. What should I do?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseSeven" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            Please ask your prescribing physician if it would be ok to delay taking the medication until
+                            after the
+                            procedure is finished. If the medications
+                            cannot be delayed, you can give the medications with a small amount of plain water.
+                        </div>
+                    </div>
+                </div>
+            </div>
             <br>
             <br>
         </div>
@@ -94,7 +222,7 @@
             //
             function showAlert() {
                 navigator.notification.alert(
-                    'You have finished the first half of the Colonoscopy Prep. Congrats :D',  // message
+                    'You have finished the Colonoscopy Prep. Congratulations!!',  // message
                     alertDismissed,         // callback
                     'Times Up',            // title
                     'Next'                  // buttonName
