--- a/www/prep12.html
+++ b/www/prep12.html
@@ -48,10 +48,10 @@
             </div>
         </nav>
         <div class="meat"> 
-            <h3> PREP:Step 8</h3>
-            <p> Now please examine your child's stool. How would you describe it? </p>
+            <h3> PREP:Step 12</h3>
+            <p> Now please examine your child's stool for a second time. How would you describe it? </p>
             <img src="img/stool-color.png" class="img-responsive" alt="Responsive image" />
-            <select id="stool_color">
+            <select id="stool_color" name="stool_color">
               <option value="1">1</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -80,7 +80,7 @@
         <script type="text/javascript">
         $(function(){
             $("#submit").click(function(){
-                window.localStorage.setItem("stoolColor2",$( "#myselect option:selected" ).text());
+                window.localStorage.setItem("stoolColor2",$('select[name=stool_color]').val());
                 window.location.href = "prep13.html";
             });
         });
