--- a/www/video.html
+++ b/www/video.html
@@ -91,6 +91,7 @@
        <video id="prep" autobuffer width="360" height="240" poster="video/placeholder.jpg">
             <source src="video/m4v/prep.m4v">
         </video>
+        <p> Google doesn't allow for automatically playing videos so on Android you will have to click on the video above and select which native video player you wish to use. Please allow the video to run its course because it should then return you back to this application.</p>
         <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
           <div class="container">
             <a href="index.html" role="button" class="btn btn-primary btn-lg btn-block">HOME</a>
